# rangebar

./: .cz.toml  .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  .rust-analyzer.toml  CHANGELOG.md  CLAUDE.md  CODEBASE_SURVEY.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  MILESTONE_cc165da.md  README.md  RELEASE_NOTES.md  STRATEGIC_PLAN.md  STRATEGIC_PLAN_CORRECTIONS.md  STRATEGIC_PLAN_SUMMARY.md  SURVEY_INDEX.md  SURVEY_QUICK_REFERENCE.md  TERMINOLOGY.md  cliff-release-notes.toml  cliff.toml  deny.toml  release-plz.toml  rustfmt.toml  test_date_investigation.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit-autoupdate.yml  publish.yml  release-plz.yml
.sessions/: .gitignore  .gitkeep  protect_sessions.sh
archived_modules/debug/: range_bars_debug.rs
archived_modules/legacy/: performance_optimization.rs  statistics_legacy.rs
benches/: rangebar_bench.rs
benchmark_output/: benchmark.arrow
cache/: README.md
crates/: CLAUDE.md
crates/rangebar/: Cargo.toml  README.md
crates/rangebar-batch/: Cargo.toml  README.md
crates/rangebar-batch/src/: engine.rs  lib.rs
crates/rangebar-cli/: Cargo.toml  README.md
crates/rangebar-cli/src/: lib.rs
crates/rangebar-config/: Cargo.toml  README.md
crates/rangebar-config/src/: algorithm.rs  data.rs  export.rs  lib.rs
crates/rangebar-core/: Cargo.toml  README.md
crates/rangebar-core/src/: checkpoint.rs  lib.rs  processor.rs  test_data_loader.rs  test_utils.rs  timestamp.rs
crates/rangebar-core/src/test_utils/: generators.rs  mod.rs
crates/rangebar-core/tests/: cross_date_real_data_validation.rs  cross_year_boundary_test.rs  incomplete_bar_continuation_proof.rs
crates/rangebar-io/: Cargo.toml  README.md
crates/rangebar-io/src/: formats.rs  lib.rs  polars_io.rs
crates/rangebar-providers/: Cargo.toml  README.md
crates/rangebar-providers/src/: lib.rs
crates/rangebar-providers/src/binance/: historical.rs  websocket.rs
crates/rangebar-providers/src/dukascopy/: builder.rs  client.rs  conversion.rs  mod.rs  types.rs
crates/rangebar-providers/src/exness/: builder.rs  client.rs  conversion.rs  mod.rs  types.rs
crates/rangebar-streaming/: CHANGELOG.md  Cargo.toml  README.md
crates/rangebar-streaming/src/: lib.rs  processor.rs  replay_buffer.rs  universal.rs
crates/rangebar/src/: lib.rs
crates/rangebar/tests/: algorithm_invariants.rs  binance_btcusdt_real_data_test.rs  binance_ethusdt_real_data_test.rs  boundary_consistency_tests.rs  cross_year_speed_comparison.rs  exness_eurusd_integration_test.rs  exness_eurusd_statistical_analysis.rs  exness_xauusd_integration_test.rs  integration_test.rs  large_boundary_tests.rs  multi_month_memory_tests.rs  production_streaming_validation.rs
data/: README.md
docs/: API.md  ARCHITECTURE.md  CLAUDE.md  NEXT_STEPS.md  README.md  TERMINOLOGY.md
docs/architecture/: ADR-001-modular-workspace.md  polars-integration-plan.yml
docs/archive/: ADVERSARIAL-AUDIT-REPORT.md  ADVERSARIAL-TEST-RESULTS-SMALL-THRESHOLDS.md  COMPREHENSIVE_GPU_CPU_ANALYSIS.md  LARGE_SCALE_BENCHMARKING.md  PERFORMANCE-TEST-REPORT-MILLIONS-OF-TRADES.md  SECURITY-AUDIT-TRAIL.md  adversarial-testing-report.md  python-migration-legacy.md
docs/development/: MIGRATION-v4-to-v5.md  MIGRATION.md  PUBLISH.md  USABILITY_ROADMAP.md  automated-updates.md  compilation-optimization.md  disk-cleanup-workflow.md
docs/diagrams/: 01-high-level-business-flow.md  02-business-use-cases.md  03-data-acquisition-decisions.md  04-processing-mode-decisions.md  05-threshold-selection-guide.md  06-complete-business-workflow.md  07-error-recovery-logic.md  08-cross-market-comparison.md  09-algorithm-business-rules.md  DIAGRAM_PROPOSALS.md  INDEX.md
docs/guides/: common-workflows.md  error-recovery.md  performance-profiling.md  publishing.md
docs/milestones/: 2025-09-24-dependency-automation-and-documentation-compression.yml
docs/planning/: INDEX.md  PRODUCTION_HARDENING_ROADMAP.md  README.md  api-threshold-granularity-migration.md  code-consolidation-plan.yml  dukascopy-cleanup-plan-v5.0.0.md  dukascopy-eurusd-audit-implementation.md  dukascopy-eurusd-audit-plan.md  dukascopy-eurusd-threshold-optimization.md  dukascopy-eurusd-ultra-low-threshold.md  dukascopy-rate-limit-mitigation.md  dukascopy-timeout-retry-strategy.md  test-cleanup-plan-v2-llm-friendly.md  test-fake-data-audit.md  test-refactoring-plan.yml  walk-forward-pattern-recognition-system-session.txt  workspace-migration-v5.0.0.md
docs/reports/: BPS_STANDARDIZATION_COMPLETE.md  BPS_VALIDATION_SUCCESS.md  CHECKPOINT_VALIDATION_REPORT.md
docs/specifications/: algorithm-spec.md
docs/testing/: test-data-guide.md
examples/: ORGANIZATION_COMPLETE.md  README.md  folder_reorganization_plan.md  historical_replay.rs  test_historical_replay.rs  validate_25bps_threshold.rs  validate_custom_threshold.rs
examples/analysis/: README.md  market_efficiency_analysis.rs  rangebar_generation_comparison.rs  tier1_symbols.rs  tier1_volume_comparison.rs
milestones/: 2025-01-09-rangebar-v0.4.0-format-alignment-release.yaml  2025-09-14-publishing-preparation-macos-transition.yaml  2025-09-14-range-bar-visualization-achievement.yaml  2025-09-14-rust-best-practices-crates-io-readiness.yaml  2025-09-18-rust-1.90.0-compatibility-upgrade.yaml  2025-09-18-statistics-v2-streaming-validation-framework.yaml  2025-09-24-dry-principle-consolidation-v0.9.0.yaml
output/: README.md
scripts/: release.sh  update-deps.sh
src/: lib.rs  range_bars.rs  range_bars_debug.rs  streaming_processor.rs  test_utils.rs
src-archived/: lib.rs  test_utils.rs  tier1.rs
src/batch/: mod.rs  (+1 more)
test_data/: README.md
tests/: boundary_consistency_tests.rs  bps_conversion_tests.rs  cross_year_speed_comparison.rs  dukascopy_audit_test.rs  dukascopy_comprehensive_test.rs  dukascopy_eurusd_adversarial_audit.rs  dukascopy_integration_test.rs  dukascopy_real_data_test.rs  dukascopy_volatile_test.rs  exness_eurusd_statistical_analysis.rs  integration_test.rs  large_boundary_tests.rs  multi_month_memory_tests.rs  production_streaming_validation.rs  statistics_v2_validation.rs
(+118 files in other folders)
