[workspace]
resolver = "2"
members = [
    "crates/rangebar-core",
    "crates/rangebar-providers",
    "crates/rangebar-config",
    "crates/rangebar-io",
    "crates/rangebar-streaming",
    "crates/rangebar-batch",
    "crates/rangebar-cli",
    "crates/rangebar",
]

[workspace.package]
version = "5.0.0"
authors = ["Terry Li <terry@eonlabs.com>"]
categories = ["algorithms", "data-structures", "finance"]
documentation = "https://docs.rs/rangebar"
edition = "2024"
homepage = "https://github.com/terrylica/rangebar"
keywords = ["finance", "trading", "range-bars", "cryptocurrency", "binance"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/terrylica/rangebar"
rust-version = "1.90"

[workspace.dependencies]
# Core dependencies (minimal)
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# CLI dependencies
clap = { version = "4.0", features = ["derive", "env"] }
config = "0.14"

# Concurrency
rayon = "1.11"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# HTTP/Network
reqwest = { version = "0.12", features = ["stream"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }

# Data formats
csv = "1.3"
zip = "2.2"
byteorder = "1.5.0"
lzma-rs = "0.3.0"
toml = "0.8"

# Data integrity
md5 = "0.7"
sha2 = "0.10"

# Analytics (optional)
polars = { version = "0.51.0", features = ["lazy", "temporal", "strings", "parquet", "csv", "ipc", "rolling_window"] }

# Streaming statistics (optional)
rolling-stats = "0.1"
tdigests = "1.0"

# Web framework (optional)
axum = { version = "0.7", features = ["json", "multipart", "ws"] }
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br"] }
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.19", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Utilities
once_cell = "1.21"
num_cpus = "1.17"

[profile.release]
lto = true
codegen-units = 1
overflow-checks = false
panic = "abort"

[profile.dev]
overflow-checks = true
