[package]
name = "rangebar-batch"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Batch processing engine for large-scale range bar analytics"
keywords = ["finance", "trading", "batch", "analytics"]
categories = ["finance", "algorithms"]

[dependencies]
rangebar-core = { path = "../rangebar-core", version = "5.0" }
rangebar-io = { path = "../rangebar-io", version = "5.0" }
rayon.workspace = true
polars.workspace = true

[features]
default = []
