[package]
name = "rangebar-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tools for range bar processing"
keywords = ["finance", "trading", "cli", "tools"]
categories = ["command-line-utilities", "finance"]

[dependencies]
rangebar-core = { path = "../rangebar-core", version = "5.0" }
rangebar-providers = { path = "../rangebar-providers", version = "5.0", features = ["all-providers"] }
rangebar-config = { path = "../rangebar-config", version = "5.0" }
rangebar-io = { path = "../rangebar-io", version = "5.0", features = ["all"] }
rangebar-streaming = { path = "../rangebar-streaming", version = "5.0" }
rangebar-batch = { path = "../rangebar-batch", version = "5.0" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rayon.workspace = true
tokio.workspace = true
md5.workspace = true
sha2.workspace = true

[features]
default = []
