[package]
name = "rangebar-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tools for range bar processing and analysis"
keywords = ["finance", "trading", "cli", "rangebar"]
categories = ["command-line-utilities", "finance"]

[dependencies]
# Internal crates (all previous phases)
rangebar-core = { path = "../rangebar-core", features = ["test-utils"] }
rangebar-providers = { path = "../rangebar-providers", features = ["all-providers"] }
rangebar-config = { path = "../rangebar-config" }
rangebar-io = { path = "../rangebar-io", features = ["parquet"] }
rangebar-streaming = { path = "../rangebar-streaming", features = ["all"] }
rangebar-batch = { path = "../rangebar-batch" }

# CLI framework
clap.workspace = true

# Async runtime
tokio.workspace = true
rayon.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# HTTP client
reqwest.workspace = true

# Data processing
polars.workspace = true
csv.workspace = true

# File I/O
zip.workspace = true

# Utilities
md5.workspace = true

# Error handling
thiserror.workspace = true

# Cryptography (for data-structure-validator)
sha2 = "0.10"

[features]
default = []
api = []  # API server feature (infrastructure not yet extracted)
polars-io = []  # Polars I/O operations

# Define all 7 binary targets
[[bin]]
name = "tier1-symbol-discovery"
path = "src/bin/tier1_symbol_discovery.rs"

[[bin]]
name = "rangebar-analyze"
path = "src/bin/parallel_tier1_analysis.rs"

[[bin]]
name = "data-structure-validator"
path = "src/bin/data_structure_validator.rs"

[[bin]]
name = "spot-tier1-processor"
path = "src/bin/spot_tier1_processor.rs"

[[bin]]
name = "polars-benchmark"
path = "src/bin/polars_benchmark.rs"

[[bin]]
name = "temporal-integrity-validator"
path = "src/bin/temporal_integrity_test_only.rs"

# TODO: Uncomment when API infrastructure is extracted to dedicated crate
# [[bin]]
# name = "rangebar-api"
# path = "src/bin/rangebar_api.rs"
