[package]
name = "rangebar-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for rangebar applications"
keywords = ["finance", "trading", "configuration"]
categories = ["config"]

[dependencies]
rangebar-core = { path = "../rangebar-core", version = "5.0" }
serde.workspace = true
config.workspace = true
clap.workspace = true
toml.workspace = true

[features]
default = []
