[package]
name = "rangebar-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core range bar construction algorithm with temporal integrity guarantees"
keywords = ["finance", "trading", "range-bars", "algorithm"]
categories = ["algorithms", "data-structures", "finance"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[features]
default = []
test-utils = []
