[package]
name = "rangebar-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core range bar construction algorithm with temporal integrity guarantees"
keywords = ["finance", "trading", "range-bars", "algorithm"]
categories = ["algorithms", "data-structures", "finance"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
csv = { workspace = true, optional = true }

# Optional dependencies for future phases
pyo3 = { version = "0.22", optional = true }
utoipa = { version = "5.4", optional = true }

[features]
default = []
test-utils = ["dep:csv"]  # Real data loading requires csv crate
python = ["pyo3"]  # Python bindings via PyO3 (future phase)
api = ["utoipa"]     # API schemas via utoipa (future phase)
