[package]
name = "rangebar-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "I/O operations for range bar data (CSV, Parquet, Arrow)"
keywords = ["finance", "trading", "io", "parquet"]
categories = ["finance", "encoding"]

[dependencies]
rangebar-core = { path = "../rangebar-core", version = "5.0" }
serde.workspace = true
csv.workspace = true
polars = { workspace = true, optional = true }

[features]
default = ["csv"]
csv = []
parquet = ["polars"]
all = ["csv", "parquet"]
