[package]
name = "rangebar-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "I/O operations for rangebar data (CSV, Parquet, Arrow)"
keywords = ["finance", "trading", "io", "parquet"]
categories = ["data-structures", "encoding"]

[dependencies]
rangebar-core = { path = "../rangebar-core" }

# Error handling
thiserror.workspace = true

# Data formats (optional, feature-gated)
polars = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
parquet = ["polars"]
all = ["parquet"]
