[package]
name = "rangebar-providers"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Data provider integrations for tick/trade data (Binance, Exness, Dukascopy)"
keywords = ["finance", "trading", "market-data", "binance", "forex"]
categories = ["finance", "api-bindings"]

[dependencies]
rangebar-core = { path = "../rangebar-core", version = "5.0" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio.workspace = true
csv.workspace = true
zip.workspace = true
lzma-rs.workspace = true

[features]
default = ["binance"]
binance = []
exness = []
dukascopy = []
all-providers = ["binance", "exness", "dukascopy"]
