[package]
name = "rangebar-providers"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Data providers for rangebar: Binance, Exness, Dukascopy"
keywords = ["binance", "exness", "dukascopy", "trading", "data-provider"]
categories = ["finance", "api-bindings"]

[dependencies]
rangebar-core = { path = "../rangebar-core" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# Async runtime
tokio.workspace = true
tokio-tungstenite = { version = "0.23", features = ["native-tls"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }

# Data formats
csv.workspace = true

# Compression (binance uses zip, dukascopy uses lzma)
zip.workspace = true
lzma-rs = { version = "0.3", optional = true }

# Dukascopy-specific dependencies
byteorder = { version = "1.5", optional = true }
once_cell = { version = "1.20", optional = true }
toml = { version = "0.8", optional = true }

# Time handling
chrono.workspace = true

# Error handling
thiserror.workspace = true

[features]
default = ["binance"]
binance = ["tokio-tungstenite", "tokio-stream", "futures-util"]
exness = ["lzma-rs"]
dukascopy = ["lzma-rs", "byteorder", "once_cell", "toml"]
all-providers = ["binance", "exness", "dukascopy"]
