[package]
name = "rangebar-streaming"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Real-time streaming engine for range bar processing"
keywords = ["finance", "trading", "streaming", "real-time"]
categories = ["finance", "algorithms"]

[dependencies]
rangebar-core = { path = "../rangebar-core", version = "5.0" }
rangebar-providers = { path = "../rangebar-providers", version = "5.0", optional = true }
tokio.workspace = true
tokio-stream.workspace = true
rayon.workspace = true
rolling-stats = { workspace = true, optional = true }
tdigests = { workspace = true, optional = true }

[features]
default = []
binance-integration = ["rangebar-providers/binance"]
stats = ["rolling-stats", "tdigests"]
indicators = []
