[package]
name = "rangebar"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Complete range bar toolkit (meta-crate for backward compatibility)"
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[dependencies]
rangebar-core = { path = "../rangebar-core", version = "5.0" }
rangebar-providers = { path = "../rangebar-providers", version = "5.0", optional = true }
rangebar-config = { path = "../rangebar-config", version = "5.0", optional = true }
rangebar-io = { path = "../rangebar-io", version = "5.0", optional = true }
rangebar-streaming = { path = "../rangebar-streaming", version = "5.0", optional = true }
rangebar-batch = { path = "../rangebar-batch", version = "5.0", optional = true }

[features]
default = ["core"]
core = []
providers = ["rangebar-providers"]
config = ["rangebar-config"]
io = ["rangebar-io"]
streaming = ["rangebar-streaming"]
batch = ["rangebar-batch"]
full = ["providers", "config", "io", "streaming", "batch"]
