[package]
name = "rangebar"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Complete range bar toolkit (meta-crate for backward compatibility)"
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[dependencies]
# Core is always included (non-optional)
rangebar-core = { path = "../rangebar-core", version = "5.0" }

# Optional sub-crates (enable via features)
rangebar-providers = { path = "../rangebar-providers", version = "5.0", optional = true }
rangebar-config = { path = "../rangebar-config", version = "5.0", optional = true }
rangebar-io = { path = "../rangebar-io", version = "5.0", optional = true }
rangebar-streaming = { path = "../rangebar-streaming", version = "5.0", optional = true }
rangebar-batch = { path = "../rangebar-batch", version = "5.0", optional = true }

[features]
default = ["core"]

# Core features (always available, passed through to rangebar-core)
core = []
test-utils = ["rangebar-core/test-utils"]
python = ["rangebar-core/python"]
api = ["rangebar-core/api"]

# Sub-crate features
providers = ["rangebar-providers"]
binance = ["providers", "rangebar-providers/binance"]
exness = ["providers", "rangebar-providers/exness"]
dukascopy = ["providers", "rangebar-providers/dukascopy"]
all-providers = ["providers", "rangebar-providers/all-providers"]

config = ["rangebar-config"]

io = ["rangebar-io"]
parquet = ["io", "rangebar-io/parquet"]

streaming = ["rangebar-streaming", "providers"]
streaming-all = ["streaming", "rangebar-streaming/all"]

batch = ["rangebar-batch", "io"]

# Convenience feature to enable everything
full = [
    "providers",
    "all-providers",
    "config",
    "io",
    "parquet",
    "streaming",
    "streaming-all",
    "batch",
    "test-utils",
]
